--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "stm32-for-vscode.makePath": "make",
     "stm32-for-vscode.armToolchainPath": "/usr/bin",
     "cortex-debug.armToolchainPath": "/usr/bin",
-    "cortex-debug.openocdPath": "/usr/local/bin/openocd",
+    "cortex-debug.openocdPath": "openocd",
     "cortex-debug.variableUseNaturalFormat": true
 }
